force-app/main/default/objects/Order/fields/Check_box_cancel__c.field-meta.xml
<CustomField>
    <fullName>Check_box_cancel__c</fullName>
    <formula>IF(Cancel_Status__c =&apos;Cancelled&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check box cancel</label>
    <type>Checkbox</type>
</CustomField>