force-app/main/default/objects/Order/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chưa giao hàng</fullName>
            </value>
            <value>
                <fullName>Đang giao hàng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>