force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chờ xử lý</fullName>
            </value>
            <value>
                <fullName>Thanh toán một phần</fullName>
            </value>
            <value>
                <fullName>Đã thanh toán</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>