force-app/main/default/objects/Order/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Tiki</fullName>
            </value>
            <value>
                <fullName>Lazada</fullName>
            </value>
            <value>
                <fullName>Shopee</fullName>
            </value>
            <value>
                <fullName>Tiktok Shop</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>